--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:elements": "npm run build:micro-one && npm run build:micro-two",
     "build:micro-one": "ng build  micro-one --prod --output-hashing none && node ./projects/micro-one/build.js",
     "build:micro-two": "ng build  micro-two --prod --output-hashing none && node ./projects/micro-two/build.js",
+    "deploy": "npm run build:micro-one && ng serve",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
