--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "build:elements": "npm run build:micro-one && npm run build:micro-two",
-    "build:micro-one": "ng build  micro-one --prod --output-hashing none && node ./projects/micro-one/build.js",
+    "build:micro-one": "ng build  micro-one --prod --output-hashing none && node ./projects/micro-one/build.js ",
     "build:micro-two": "ng build  micro-two --prod --output-hashing none && node ./projects/micro-two/build.js",
     "deploy": "npm run build:micro-one && ng serve",
     "test": "ng test",
@@ -29,11 +29,13 @@
     "@webcomponents/custom-elements": "^1.2.1",
     "core-js": "^2.5.4",
     "document-register-element": "^1.7.2",
+    "ngx-build-plus": "^9.0.2",
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^8.2.0",
     "@angular-devkit/build-angular": "~0.803.19",
     "@angular/cli": "~8.3.19",
     "@angular/compiler-cli": "~8.2.14",
