--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:micro-one": "ng build  micro-one --prod --optimization --output-hashing none && node ./projects/micro-one/build.js ",
     "build:micro-two": "ng build  micro-two --prod --output-hashing none && node ./projects/micro-two/build.js",
     "deploy": "npm run build:micro-one && ng serve",
-    "deploy-externals": "npm run build:micro-one:externals && ng serve",
+    "deploy-externals": "npm run build:micro-one:externals && ng serve --port=4201",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
